--- a/themes/topspin/category-page.html
+++ b/themes/topspin/category-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
 <head>
 	<title>category page</title>
   <meta charset="utf-8">
@@ -160,63 +160,60 @@
           <div class="product-cat-block-wrp">
             <ul class="ulc">
               <li>
-                <div class="pro-cat-block-head">
-                  <ul class="ulc clearfix">
-                    <li>
-                      <img src="assets/images/cat-img-icon-01.png" alt="">
-                      <h2>Glaslift CA-400 GL</h2>
-                    </li>
-                    <li>
-                      <span>Bruto prijs:</span>
-                      <strong>33.085,-</strong>
-                      <span class="clearfix"></span>
-                    </li>
-                    <li>
-                      <a href="#">Product weergeven </a>
-                    </li>
-                  </ul>
+                <div class="pro-cat-block-head clearfix">
+                  <div class="des-head-blc-lft">
+                    <i>
+                      <img src="assets/images/cat-img-icon-01.png" alt="">                      
+                    </i>
+                    <h2>Glaslift CA-400 GL</h2>
+                  </div>
+                  <div class="des-head-blc-mid">
+                    <span>Bruto prijs:</span>
+                    <strong>33.085,-</strong>
+                  </div>
+                  <div class="des-head-blc-rgt">
+                    <a href="#">Product weergeven </a>
+                  </div>
                 </div>
                 <div class="pro-cat-block-des">
                   <p>Tekstveld die je kunt <strong>veranderen</strong> naar wens zoals bijvoorbeeld een beknopte omschrijving. Hier een voorbeeld. Onze prachtige Glassworker 425 beschikt over een accurange van 2 uur continu werken en kan maar liefst <strong>6500mm</strong> de hoogte in met een maximale load van <strong>950kg.</strong></p>
                 </div>
               </li>
               <li>
-                <div class="pro-cat-block-head">
-                  <ul class="ulc clearfix">
-                    <li>
-                      <img src="assets/images/cat-img-icon-02.png" alt="">
-                      <h2>Glaslift EVO 3500TS</h2>
-                    </li>
-                    <li>
-                      <span>Bruto prijs:</span>
-                      <strong> 4.085,-</strong>
-                      <span class="clearfix"></span>
-                    </li>
-                    <li>
-                      <a href="#">Product weergeven </a>
-                    </li>
-                  </ul>
+                <div class="pro-cat-block-head clearfix">
+                  <div class="des-head-blc-lft">
+                    <i>
+                      <img src="assets/images/cat-img-icon-02.png" alt="">                      
+                    </i>
+                    <h2>Glaslift EVO 3500TS</h2>
+                  </div>
+                  <div class="des-head-blc-mid">
+                    <span>Bruto prijs:</span>
+                    <strong> 4.085,-</strong>
+                  </div>
+                  <div class="des-head-blc-rgt">
+                    <a href="#">Product weergeven </a>
+                  </div>
                 </div>
                 <div class="pro-cat-block-des">
                   <p>Tekstveld die je kunt <strong>veranderen</strong> naar wens zoals bijvoorbeeld een beknopte omschrijving. Hier een voorbeeld. Onze prachtige Glassworker 425 beschikt over een accurange van 2 uur continu werken en kan maar liefst <strong>6500mm</strong> de hoogte in met een maximale load van <strong>950kg.</strong> <br>There are also possibilitys that the text has 3 or more lines like here, then the padding after the last line must be the same like everywhere.</p>
                 </div>
               </li>
               <li>
-                <div class="pro-cat-block-head">
-                  <ul class="ulc clearfix">
-                    <li>
-                      <img src="assets/images/cat-img-icon-03.png" alt="">
-                      <h2>Glaslift CA-400 GL</h2>
-                    </li>
-                    <li>
-                      <span>Bruto prijs:</span>
-                      <strong>600,-</strong>
-                      <span class="clearfix"></span>
-                    </li>
-                    <li>
-                      <a href="#">Product weergeven </a>
-                    </li>
-                  </ul>
+                <div class="pro-cat-block-head clearfix">
+                  <div class="des-head-blc-lft">
+                    <i>
+                      <img src="assets/images/cat-img-icon-03.png" alt="">                      
+                    </i>
+                    <h2>Glaslift CA-400 GL</h2>
+                  </div>
+                  <div class="des-head-blc-mid">
+                    <span>Bruto prijs:</span>
+                    <strong>600,-</strong>
+                  </div>
+                  <div class="des-head-blc-rgt">
+                    <a href="#">Product weergeven </a>
+                  </div>
                 </div>
                 <div class="pro-cat-block-des">
                 <p>uiterst compacte, <strong>lichtgewicht montagelift,</strong> snel in positie te brengen. De lift is <strong>voorzien van een normaal montageplateau</strong> zodat ook bv. buitenzonwering of een airco-unit. Inclusief glaskop voorzien van 4 glaszuigers en uitschuifbare ondersteuning <strong>voor glasplaten tot 400cm.</strong> </p>
@@ -225,8 +222,10 @@
             </ul>
           </div>
           <hr/>
-          <h1>CATEGORY PAGE &nbsp; - PAGEBUILDER FOOTER CONTENT</h1>
-          <span>Hier zou je nog meer teksten kunnen proppen wanneer nodig.</span>
+          <div class="cat-page-dft-blc">
+            <h1>CATEGORY PAGE &nbsp; - PAGEBUILDER FOOTER CONTENT</h1>
+            <span>Hier zou je nog meer teksten kunnen proppen wanneer nodig.</span>
+          </div>
         </div>                          
       </div>
     </div>
