--- a/themes/topspin/product-page.html
+++ b/themes/topspin/product-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html> 
-<head>
+<head> 
 	<title>Product page</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -140,8 +140,10 @@
     <div class="row">
       <div class="col-12">
         <div class="hdr-breadcrumbs">
-          <ul>           
-            <li><a href="#">Home</a></li>
+          <ul>
+            <li><a href="#">Home</a></li>  
+            <li><a href="#">glasliften</a></li>  
+            <li><a href="#">glassworker 425 offroad</a></li>  
           </ul>
         </div>     
       </div>
@@ -155,41 +157,42 @@
     <div class="row">
       <div class="col-12">
         <div class="product-des-controller">
-          <div class="pro-des-head-blc">
-            <ul class="ulc clearfix">
-              <li>
+          <div class="pro-des-head-blc clearfix">
+            <div class="des-head-blc-lft">
+              <i>
                 <img src="assets/images/cat-img-icon-01.png" alt="">
-                <h2>Glassworker 425 Offroad </h2>
-              </li>
-              <li>
-                <span>Bruto prijs:</span>
-                <strong>33.085,-</strong>
-                <span class="clearfix"></span>
-              </li>
-              <li>
-                <div class="pro-des-qty clearfix">
-                  <div class="qty">
-                    <span class="minus">-</span>
-                    <input min="1" type="number" class="count" name="qty" value="1">
-                    <span class="plus">+</span>
-                  </div>
-                  <strong>aantal</strong>
+              </i>                
+              <h2>Glassworker 425 Offroad </h2>
+            </div>
+            <div class="des-head-blc-mid">
+              <span>Bruto prijs:</span>
+              <strong>33.085,-</strong>
+            </div>
+            <div class="des-head-blc-rgt">
+              <div class="pro-des-qty clearfix">
+                <div class="qty">
+                  <span class="minus">-</span>
+                  <input min="1" type="number" class="count" name="qty" value="1">
+                  <span class="plus">+</span>
                 </div>
-                <div class="qnt-divider"></div>
-                <a href="#">Toevoegen aan offerte</a>
-              </li>
-            </ul>
+                <strong>aantal</strong>
+              </div>
+              <div class="qnt-divider"></div>
+              <a href="#">Toevoegen aan offerte</a>
+            </div>
           </div>
           <div class="product-des-tow-part clearfix">
             <div class="product-des-left float-left">
               <h1>Dé Nieuwe GENERATIE IN GLASROBOTS</h1>
-              <p>De Glassworker GW425 Offroad HL is de krachtigste en <br>veiligste glasrobot in zijn klasse. Hij is uitgevoerd met sterke <br> voorwielaandrijving en bredere geprofileerde luchtbanden <br> en kan tot maximaal 425kg liften. </p> 
-              <p>Alle vacuümtechniek zit voor in de glaskop, waardoor deze <br> 360°gedraaid kan worden en er geen vacuümslangen meer <br> in de weg zitten of klem kunnen raken. </p> 
-              <p>De mast kan 2x 900mm telescoperen. De glaskop is een- <br>voudig aan te passen aan de vorm en het gewicht van de last. <br> Dit zonder dat er gereedschap benodigd is. </p>
-              <ul class="ulc">
-                <li>> Meer informatie over de Glassworker 425 offroad.</li>
-                <li>> Bekijk alle glasrobots.</li>
-              </ul>
+              <div class="product-des-left-pera">
+                <p>De Glassworker GW425 Offroad HL is de krachtigste en veiligste glasrobot in zijn klasse. Hij is uitgevoerd met sterke voorwielaandrijving en bredere geprofileerde luchtbanden en kan tot maximaal 425kg liften. </p> 
+                <p>Alle vacuümtechniek zit voor in de glaskop, waardoor deze 360°gedraaid kan worden en er geen vacuümslangen meer in de weg zitten of klem kunnen raken. </p> 
+                <p>De mast kan 2x 900mm telescoperen. De glaskop is een-voudig aan te passen aan de vorm en het gewicht van de last. Dit zonder dat er gereedschap benodigd is. </p>
+                <ul class="ulc">
+                  <li>> Meer informatie over de Glassworker 425 offroad.</li>
+                  <li>> Bekijk alle glasrobots.</li>
+                </ul>              
+              </div>
             </div>
             <div class="product-des-right float-left w-md-50">
               <img src="assets/images/single-pro-img-001.png" alt="">
@@ -201,7 +204,7 @@
               <tbody>
                 <tr>
                   <td>Maximaal hefvermogen: <strong>625 kg.</strong></td>
-                  <td>Werkhoogte verticaal: 3100 mm.</td>
+                  <td>Werkhoogte verticaal: <strong>3100 mm.</strong></td>
                 </tr>
                 <tr>
                   <td>Maximaal hefvermogen: <strong>625 kg.</strong></td>
@@ -223,8 +226,10 @@
             </table>
           </div>
           <hr/>
-          <h1>Een zelf in te delen product pagina \ landingpage</h1>
-          <span>Tekst voorbeeld.</span>
+          <div class="pro-page-dft-blc">
+            <h1>Een zelf in te delen product pagina \ landingpage</h1>
+            <span>Tekst voorbeeld.</span>          
+          </div>  
         </div>                          
       </div>
     </div>
