--- a/themes/topspin/front-page.html
+++ b/themes/topspin/front-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
 <head> 
 	<title>Home page</title>
   <meta charset="utf-8">
@@ -159,7 +159,7 @@
             <li>
               <div class="pro-grd-main mHc">
                 <div class="pro-grd-img">
-                  <img src="assets/images/pro-grd-img-001.jpg" alt="">
+                  <img src="assets/images/pro-grd-img-001.png" alt="">
                 </div>                
                 <div class="pro-grd-des text-white">
                   <h2>Montageliften</h2>
@@ -171,7 +171,7 @@
             <li>
               <div class="pro-grd-main mHc">
                 <div class="pro-grd-img">
-                  <img src="assets/images/pro-grd-img-002.jpg" alt="">
+                  <img src="assets/images/pro-grd-img-002.png" alt="">
                 </div>                
                 <div class="pro-grd-des text-white">
                   <h2>KANAALLIFTEN</h2>
@@ -183,7 +183,7 @@
             <li>
               <div class="pro-grd-main mHc">
                 <div class="pro-grd-img">
-                  <img src="assets/images/pro-grd-img-003.jpg" alt="">
+                  <img src="assets/images/pro-grd-img-003.png" alt="">
                 </div>                
                 <div class="pro-grd-des text-white">
                   <h2>GLASLIFTEN</h2>
@@ -195,7 +195,7 @@
             <li>
               <div class="pro-grd-main mHc">
                 <div class="pro-grd-img">
-                  <img src="assets/images/pro-grd-img-004.jpg" alt="">
+                  <img src="assets/images/pro-grd-img-004.png" alt="">
                 </div>                
                 <div class="pro-grd-des text-white">
                   <h2>GLASROBOTS</h2>
@@ -207,7 +207,7 @@
             <li>
               <div class="pro-grd-main mHc">
                 <div class="pro-grd-img">
-                  <img src="assets/images/pro-grd-img-005.jpg" alt="">
+                  <img src="assets/images/pro-grd-img-005.png" alt="">
                 </div>                
                 <div class="pro-grd-des text-white">
                   <h2>GLASZUIGERS</h2>
@@ -219,7 +219,7 @@
             <li>
               <div class="pro-grd-main mHc">
                 <div class="pro-grd-img">
-                  <img src="assets/images/pro-grd-img-006.jpg" alt="">
+                  <img src="assets/images/pro-grd-img-006.png" alt="">
                 </div>                
                 <div class="pro-grd-des text-white">
                   <h2>GLASTRASNPORTERS</h2>
@@ -231,7 +231,7 @@
             <li>
               <div class="pro-grd-main mHc">
                 <div class="pro-grd-img">
-                  <img src="assets/images/pro-grd-img-007.jpg" alt="">
+                  <img src="assets/images/pro-grd-img-007.png" alt="">
                 </div>
                 <div class="pro-grd-des text-white">
                   <h2>PLATENLIFTEN</h2>
@@ -243,7 +243,7 @@
             <li>
               <div class="pro-grd-main mHc">
                 <div class="pro-grd-img">
-                  <img src="assets/images/pro-grd-img-008.jpg" alt="">
+                  <img src="assets/images/pro-grd-img-008.png" alt="">
                 </div>                
                 <div class="pro-grd-des text-white">
                   <h2>POWERTOOLS</h2>
@@ -270,10 +270,8 @@
               <img src="assets/images/machine-img.png" alt="">
             </div>
             <div class="glassworker-des text-white">
-              <div class="glassworker-des-head text-uppercase">
-                <h1>Glassworker 425 Offroad High Lifter</h1>
-                <h2>Dé nieuwe generatie in glasrobots. </h2>             
-              </div>
+              <h1>Glassworker 425 Offroad High Lifter</h1>
+              <h2>Dé nieuwe generatie in glasrobots. </h2>
               <div class="glassworker-des-main">
                 <p>De Glassworker GW425 Offroad HL is de krachtigste en 
                 veiligste glasrobot in zijn klasse. Hij is uitgevoerd met sterke 
@@ -286,8 +284,8 @@
                 voudig aan te passen aan de vorm en het gewicht van de <br>
                 last. Dit zonder dat er gereedschap benodigd is. </p>
                 <ul class="ulc font-weight-bold">
-                  <li>Meer informatie over de Glassworker 425 offroad.</li>
-                  <li>Bekijk alle glasrobots.</li>
+                  <li><a href="#">Meer informatie over de Glassworker 425 offroad.</a></li>
+                  <li><a href="#">Bekijk alle glasrobots.</a></li>
                 </ul>                
               </div>
             </div>
@@ -299,14 +297,15 @@
 </section>
 
 
-<section class="pagebuilder-sec-1" style="min-height: 330px;">
+<section class="hh-pagebuilder-sec pagebuilder-sec-1" style="min-height: 330px;">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="pagebuilder-sec-1-innr text-uppercase">
+        <div class="pagebuilder-sec-1-innr">
           <h1>Pagebuilder content - the h1 is with caps!</h1>
           <h2>h2 also caps</h2>
-          <span>pagebuilder</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit explicabo iste expedita ea dolorum ex esse, praesentium doloremque dolorem similique soluta, eveniet reprehenderit obcaecati rem voluptatum suscipit mollitia facere sequi debitis dolore est eligendi dolor nemo! Assumenda sapiente esse totam. Dignissimos cupiditate tenetur nesciunt laborum perspiciatis sequi nobis repellendus. Ipsam aut, porro officia. Iste provident eligendi ut repellendus cumque magnam, assumenda, beatae similique, id sequi qui atque. Suscipit, in atque pariatur quibusdam, laborum veniam vitae, omnis animi sequi fuga quae officia unde ex mollitia aliquid ea quod. Vitae iste laboriosam id animi eius vel, perferendis beatae, harum veniam voluptas vero!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi molestias neque et eaque possimus temporibus sapiente cumque consequuntur sit! Aspernatur quo facere earum, similique inventore sunt perferendis! Officia aut praesentium, ab aliquid facere dolor laudantium, eos. Eveniet quod sint molestiae.</p>
         </div>
       </div>
     </div>
@@ -314,12 +313,13 @@
 </section>
 
 
-<section class="pagebuilder-sec-2" style="background-color:#d9d9d9; min-height: 495px;">
+<section class="hh-pagebuilder-sec pagebuilder-sec-2">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="pagebuilder-sec-1-innr text-uppercase">
           <h1>Pagebuilder 100% width block just like the wegmetkalk.nl site with an 100% <br> bg image</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit explicabo iste expedita ea dolorum ex esse, praesentium doloremque dolorem similique soluta, eveniet reprehenderit obcaecati rem voluptatum suscipit mollitia facere sequi debitis dolore est eligendi dolor nemo! Assumenda sapiente esse totam. Dignissimos cupiditate tenetur nesciunt laborum perspiciatis sequi nobis repellendus. Ipsam aut, porro officia. Iste provident eligendi ut repellendus cumque magnam, assumenda, beatae similique, id sequi qui atque. Suscipit, in atque pariatur quibusdam, laborum veniam vitae, omnis animi sequi fuga quae officia unde ex mollitia aliquid ea quod. Vitae iste laboriosam id animi eius vel, perferendis beatae, harum veniam voluptas vero!</p>
         </div>
       </div>
     </div>
@@ -327,14 +327,15 @@
 </section>
 
 
-<section class="pagebuilder-sec-3" style="min-height: 445px;">
+<section class="hh-pagebuilder-sec pagebuilder-sec-3">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="pagebuilder-sec-1-innr text-uppercase">
           <h1>Pagebuilder content - the h1 is with caps!</h1>
           <h2>h2 also caps</h2>
-          <span>pagebuilder</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit explicabo iste expedita ea dolorum ex esse, praesentium doloremque dolorem similique soluta, eveniet reprehenderit obcaecati rem voluptatum suscipit mollitia facere sequi debitis dolore est eligendi dolor nemo! Assumenda sapiente esse totam. Dignissimos cupiditate tenetur nesciunt laborum perspiciatis sequi nobis repellendus. Ipsam aut, porro officia. Iste provident eligendi ut repellendus cumque magnam, assumenda, beatae similique, id sequi qui atque. Suscipit, in atque pariatur quibusdam, laborum veniam vitae, omnis animi sequi fuga quae officia unde ex mollitia aliquid ea quod. Vitae iste laboriosam id animi eius vel, perferendis beatae, harum veniam voluptas vero!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi molestias neque et eaque possimus temporibus sapiente cumque consequuntur sit! Aspernatur quo facere earum, similique inventore sunt perferendis! Officia aut praesentium, ab aliquid facere dolor laudantium, eos. Eveniet quod sint molestiae.</p>
         </div>
       </div>
     </div>
@@ -413,7 +414,7 @@
         <div class="col-12">
           <div class="ftr-btm-innr clearfix">
             <div class="ftr-btm-lft">
-              <span>©2020 Topspin international. Alle rechten voorbehouden</span>
+              <span>&copy;2020 Topspin international. Alle rechten voorbehouden</span>
             </div>
             <div class="ftr-btm-rgt">
               <ul class="ulc clearfix text-right">
