--- a/themes/topspin/category-page.html
+++ b/themes/topspin/category-page.html
@@ -98,6 +98,7 @@
                       <li><a href="#">glasliften</a></li>
                       <li><a href="#">glasrobots</a></li>
                       <li><a href="#">glaszuigers</a></li>
+                      <li><a href="#">glasliften</a></li>
                       <li><a href="#">glastransporters</a></li>
                     </ul>
                   </li>
@@ -232,12 +233,8 @@
   </div>
 </section>
 
-
-<!-- -- Gap markup--- -->
-<div class="gap" data-value='100' data-md='50' data-xs='40' data-sm='30' data-xxs='20'></div>
-<div class="margin" data-value='100'></div>
-<div class="padding" data-value='100'></div>
-
+<!-- gap -->
+<div style="height: 55px"></div>
 
 <footer class="footer-wrp">
   <div class="ftr-main-wrp">
@@ -304,13 +301,13 @@
       </div>
     </div>   
   </div>
-  <div class="ftr-btm-wrp">
+  <div class="ftr-btm-wrp hide-xs">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <div class="ftr-btm-innr clearfix">
             <div class="ftr-btm-lft">
-              <span>©2020 Topspin international. Alle rechten voorbehouden</span>
+              <span>&copy;2020 Topspin international. Alle rechten voorbehouden</span>
             </div>
             <div class="ftr-btm-rgt">
               <ul class="ulc clearfix text-right">
@@ -324,8 +321,27 @@
         </div>
       </div>
     </div>   
-  </div>  
+  </div> 
+  <div class="ftr-btm-wrp-xs show-xs">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="ftr-btm-innr-xs clearfix">
+            <div class="ftr-btm-lft-xs">
+              <span>&copy;2020 Topspin int., alle rechten voorbehouden.</span>
+            </div>
+            <div class="ftr-btm-rgt-xs">
+              <a href="#">
+                <img src="assets/images/ftr-logo.jpg" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>   
+  </div>    
 </footer>
+
 
 <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-3.0.0.js"></script>
