--- a/themes/topspin/front-page.html
+++ b/themes/topspin/front-page.html
@@ -98,6 +98,7 @@
                       <li><a href="#">glasliften</a></li>
                       <li><a href="#">glasrobots</a></li>
                       <li><a href="#">glaszuigers</a></li>
+                      <li><a href="#">glasliften</a></li>
                       <li><a href="#">glastransporters</a></li>
                     </ul>
                   </li>
@@ -297,7 +298,7 @@
 </section>
 
 
-<section class="hh-pagebuilder-sec pagebuilder-sec-1" style="min-height: 330px;">
+<section class="hh-pagebuilder-sec pagebuilder-sec-1">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -341,6 +342,9 @@
     </div>
   </div>    
 </section>
+
+<!-- gap -->
+<div style="height: 55px"></div>
 
 
 <footer class="footer-wrp">
@@ -408,7 +412,7 @@
       </div>
     </div>   
   </div>
-  <div class="ftr-btm-wrp">
+  <div class="ftr-btm-wrp hide-xs">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -428,7 +432,25 @@
         </div>
       </div>
     </div>   
-  </div>  
+  </div> 
+  <div class="ftr-btm-wrp-xs show-xs">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="ftr-btm-innr-xs clearfix">
+            <div class="ftr-btm-lft-xs">
+              <span>&copy;2020 Topspin int., alle rechten voorbehouden.</span>
+            </div>
+            <div class="ftr-btm-rgt-xs">
+              <a href="#">
+                <img src="assets/images/ftr-logo.jpg" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>   
+  </div>    
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
