top block added

--- a/themes/topspin/category-page.html
+++ b/themes/topspin/category-page.html
@@ -156,8 +156,10 @@
     <div class="row">
       <div class="col-12">
         <div class="cat-controller product-des-controller">
-          <h1>GLASliften, van handige tilhulp tot offroad robotrijder</h1>
-          <p>Hieronder vindt u een verkorte opsomming van ons assortiment aan glasliften en glasmontageliften. Klik op de onderstaande glasliften om naar de juiste glaslift pagina te gaan. Staat de glaslift die u zoekt er niet bij, kijk dan ook nog eens bij onze overige montageliften, glasrobots en materiaalliften. Uiteraard kunt u ons natuurlijk ook altijd even bellen voor advies over de gewenste montagelift.</p>
+          <div class="product-cat-top-block">
+            <h1>GLASliften, van handige tilhulp tot offroad robotrijder</h1>
+            <p>Hieronder vindt u een verkorte opsomming van ons assortiment aan glasliften en glasmontageliften. Klik op de onderstaande glasliften om naar de juiste glaslift pagina te gaan. Staat de glaslift die u zoekt er niet bij, kijk dan ook nog eens bij onze overige montageliften, glasrobots en materiaalliften. Uiteraard kunt u ons natuurlijk ook altijd even bellen voor advies over de gewenste montagelift.</p>
+          </div>
           <div class="product-cat-block-wrp">
             <ul class="ulc">
               <li>
