--- a/themes/topspin/front-page.html
+++ b/themes/topspin/front-page.html
@@ -273,22 +273,21 @@
             <div class="glassworker-des text-white">
               <h1>Glassworker 425 Offroad High Lifter</h1>
               <h2>Dé nieuwe generatie in glasrobots. </h2>
-              <div class="glassworker-des-main">
-                <p>De Glassworker GW425 Offroad HL is de krachtigste en 
+              <div class="glassworker-des-main"></div>
+              <p>De Glassworker GW425 Offroad HL is de krachtigste en 
                 veiligste glasrobot in zijn klasse. Hij is uitgevoerd met sterke 
                 voorwielaandrijving en bredere geprofileerde luchtbanden 
                 en kan tot maximaal 425kg liften.</p> 
-                <p>Alle vacuümtechniek zit voor in de glaskop, waardoor deze 
+              <p>Alle vacuümtechniek zit voor in de glaskop, waardoor deze 
                 360°gedraaid kan worden en er geen vacuümslangen meer
                 in de weg zitten of klem kunnen raken. </p>
-                <p>De mast kan 2x 900mm telescoperen. De glaskop is een-
+              <p>De mast kan 2x 900mm telescoperen. De glaskop is een-
                 voudig aan te passen aan de vorm en het gewicht van de <br>
                 last. Dit zonder dat er gereedschap benodigd is. </p>
-                <ul class="ulc font-weight-bold">
-                  <li><a href="#">Meer informatie over de Glassworker 425 offroad.</a></li>
-                  <li><a href="#">Bekijk alle glasrobots.</a></li>
-                </ul>                
-              </div>
+              <ul class="ulc font-weight-bold">
+                <li><a href="#">Meer informatie over de Glassworker 425 offroad.</a></li>
+                <li><a href="#">Bekijk alle glasrobots.</a></li>
+              </ul>                
             </div>
           </div>
         </div>
