--- a/themes/topspin/product-page.html
+++ b/themes/topspin/product-page.html
@@ -184,18 +184,16 @@
           </div>
           <div class="product-des-tow-part clearfix">
             <div class="product-des-left float-left">
-              <h1>Dé Nieuwe GENERATIE IN GLASROBOTS</h1>
-              <div class="product-des-left-pera">
-                <p>De Glassworker GW425 Offroad HL is de krachtigste en veiligste glasrobot in zijn klasse. Hij is uitgevoerd met sterke voorwielaandrijving en bredere geprofileerde luchtbanden en kan tot maximaal 425kg liften. </p> 
-                <p>Alle vacuümtechniek zit voor in de glaskop, waardoor deze 360°gedraaid kan worden en er geen vacuümslangen meer in de weg zitten of klem kunnen raken. </p> 
-                <p>De mast kan 2x 900mm telescoperen. De glaskop is een-voudig aan te passen aan de vorm en het gewicht van de last. Dit zonder dat er gereedschap benodigd is. </p>
-                <ul class="ulc">
-                  <li>> Meer informatie over de Glassworker 425 offroad.</li>
-                  <li>> Bekijk alle glasrobots.</li>
-                </ul>              
-              </div>
+            <h1>Dé Nieuwe GENERATIE IN GLASROBOTS</h1>
+              <p>De Glassworker GW425 Offroad HL is de krachtigste en veiligste glasrobot in zijn klasse. Hij is uitgevoerd met sterke voorwielaandrijving en bredere geprofileerde luchtbanden en kan tot maximaal 425kg liften. </p> 
+              <p>Alle vacuümtechniek zit voor in de glaskop, waardoor deze 360°gedraaid kan worden en er geen vacuümslangen meer in de weg zitten of klem kunnen raken. </p> 
+              <p>De mast kan 2x 900mm telescoperen. De glaskop is een-voudig aan te passen aan de vorm en het gewicht van de last. Dit zonder dat er gereedschap benodigd is. </p>
+              <ul>
+                <li> Meer informatie over de Glassworker 425 offroad.</li>
+                <li> Bekijk alle glasrobots.</li>
+              </ul>    
             </div>
-            <div class="product-des-right float-left w-md-50">
+            <div class="product-des-right float-left">
               <img src="assets/images/single-pro-img-001.png" alt="">
             </div>
           </div>
