--- a/themes/topspin/index.html
+++ b/themes/topspin/index.html
@@ -8,7 +8,7 @@
 
 <!--   <?php $favicon = get_theme_mod('favicon'); if(!empty($favicon)) { ?> 
   <link rel="shortcut icon" href="<?php echo $favicon; ?>" />
-  <?php } ?> -->
+  <?php } ?> --> 
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap-select.min.css">
@@ -152,18 +152,20 @@
 
 <section class="main-content">
   <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="sitemap">
-            <h2>Sitemap</h2>
-            <nav>
-              <ul>
-                <li><a href="front-page.html" target="_blank">Home</a></li>
-              </ul>
-            </nav>
-          </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="sitemap">
+          <h2>Sitemap</h2>
+          <nav>
+            <ul>
+              <li><a href="front-page.html" target="_blank">Home Page</a></li>
+              <li><a href="category-page.html" target="_blank">Category Page</a></li>
+              <li><a href="product-page.html" target="_blank">Product Page</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
+    </div>
   </div>    
 </section>
 
